# Comio

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: config.py  database.py  exceptions.py  main.py  middleware.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 26d1728a5de0_initial_schema.py  626926e59353_enable_pgvector_extension.py  6b8a1f7f1d2b_add_user_llm_settings.py
apps/api/auth/: __init__.py  dependencies.py  jwt.py  passwords.py
apps/api/models/: __init__.py  audit_log.py  base.py  chat.py  deployment.py  embedding.py  incident.py  project.py  sandbox.py  user.py
apps/api/repositories/: __init__.py  base.py  chat.py  incident.py  project.py  remediation.py  sandbox.py  user.py
apps/api/routes/: auth.py  chat.py  health.py  incidents.py  projects.py  remediations.py  sandbox.py  webhooks.py
apps/api/schemas/: __init__.py  base.py  chat.py  deployment.py  incident.py  project.py  sandbox.py  user.py
apps/api/services/: approval_service.py  chat_service.py  event_service.py  file_ops_service.py  fix_service.py  rca_service.py  sandbox_manager.py
apps/demo-app/: __init__.py  main.py  pyproject.toml
apps/web/: package-lock.json  package.json
apps/web/src/app/: layout.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/deployments/: page.tsx
apps/web/src/app/incidents/: page.tsx
apps/web/src/app/incidents/[id]/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/projects/: page.tsx
apps/web/src/app/projects/[id]/: page.tsx
apps/web/src/app/projects/[id]/sandbox/: page.tsx
apps/web/src/app/sandboxes/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/: app-sidebar.tsx  header.tsx
apps/web/src/components/ui/: sidebar.tsx
apps/web/src/lib/: api.ts
docker/: Dockerfile.demo-app  Dockerfile.sandbox
docs/: 30-day-build-plan.md
docs/runbooks/: high-error-rate.md  high-latency.md  memory-leak.md
infra/observability/: alert_rules.yml  alertmanager.yml  prometheus.yml
scripts/: seed_runbooks.py  test_anomaly_detection.py  test_fix_generation.py
tests/: conftest.py  test_api.py  test_approval_service.py  test_event_service.py  test_fix_service.py  test_health.py  test_incident_schemas.py  test_remediation_repo.py  test_remediations_api.py
