[project]
name = "comio-api"
version = "0.1.0"
description = "Comio FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "docker>=7.1.0",
    "websockets>=14.0",
    "redis>=5.2.0",
    "python-multipart>=0.0.18",
    "PyGithub>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"